fix: fix image CSS distortion in coponent_image when image source is external

--- a/core/component_image/css/component_image.less
+++ b/core/component_image/css/component_image.less
@@ -55,6 +55,7 @@
 					max-height: 100%;
 					// width: 100%;
 					max-width: 100%;
+					object-fit: contain;
 
 					// on focus adds a soft shadow and outline
 					&:focus {
